Removed mocks of JwtDecoder.